--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ ul li {
     list-style: none;
     font-size: 15px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    transform: 0.3s;
+    transition: transform 0.3s ease-in;
 }
 
 a {
@@ -36,4 +37,76 @@ a {
 
 ul li:hover {
     cursor: pointer;
+    border-bottom: 2px solid #e0dd0d;
+}
+
+#text-center {
+    background: url("bg.jpg") no-repeat center center;
+    background: cover;
+    width: 100%;
+    height: 92vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#text-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#text-center h1 {
+    font-size: 70px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(207, 210, 30);
+}
+
+#text-center p {
+    font-size: 20px;
+    color: #fff;
+    font-weight: bolder;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+}
+
+#section-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #b393bd;
+
+}
+
+#section-about h2 {
+    margin: 50px;
+    font-size: 35px;
+    color: #fff;
+}
+
+#descrition {
+    display: flex;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+#descrition div img {
+    width: 250px;
+    height: 200px;
+}
+
+#descrition div {
+    display: flex;
+    padding: 10px;
+    width: 500px;
+}
+
+#descrition div p {
+    padding: 10px;
+    text-align: justify;
+    font-size: 17px;
 }
