--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ ul li:hover {
     justify-content: center;
     align-items: center;
     background: #b393bd;
+    height: 500px;
 
 }
 
@@ -109,4 +110,92 @@ ul li:hover {
     padding: 10px;
     text-align: justify;
     font-size: 17px;
+}
+
+#contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #d6d5d5;
+    height: 500px;
+}
+
+#contact-main {
+    padding: 30px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+#contact h1 {
+    margin: -20px 0 30px 0;
+    font-size: 35px;
+    color: #92219d;
+
+}
+
+#contact-main div {
+    display: flex;
+    width: 500px;
+    flex-direction: column;
+    margin: 0 35px;
+}
+
+#contact-main div h3 {
+    font-size: 35px;
+    padding-bottom: 5px;
+    font-weight: bolder;
+}
+
+#contact-main div p {
+    line-height: 25px;
+    text-align: justify;
+}
+
+#form-contact {
+    display: flex;
+    flex-direction: column;
+
+}
+
+#input-name {
+    height: 19px;
+    border-radius: 4px;
+    padding: 5px;
+    margin-bottom: 5px;
+    border: 1px solid #653569;
+    background: #d2c5d3;
+    border: none;
+}
+
+::placeholder {
+    font-size: 15px;
+    color: #92219d;
+    text-align: start;
+}
+
+#input-text {
+
+    height: 70px;
+    border-radius: 4px;
+    padding: 5px;
+    margin-bottom: 5px;
+    background: #d2c5d3;
+    border: 1px solid #653569;
+    border: none;
+
+}
+
+#button-contact {
+    height: 40px;
+    border: none;
+    background: #653569;
+    cursor: pointer;
+    font-size: 20px;
+    color: #fff;
+    border-radius: 10px;
 }
