--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background: #ba08948d;
+    background: #fc59d08d;
 
 }
 
@@ -45,7 +45,7 @@ ul li:hover {
 }
 
 #text-center {
-    background: url("bg.jpg") no-repeat center center;
+    background: url("/assets/bg.jpg") no-repeat center center;
     background: cover;
     width: 100%;
     height: 92vh;
